[gd_scene load_steps=8 format=3 uid="uid://by1r6k525gmr2"]

[ext_resource type="PackedScene" uid="uid://bd3phdbrcul61" path="res://Global_Scenes/Debug/Command_Edit/3D/Command_Preview_Object_Path.tscn" id="1_dmsvm"]
[ext_resource type="Script" uid="uid://bf3r4bacyjevx" path="res://Global_Scenes/Debug/Command_Edit/Scripts/Move_Free_Camera.gd" id="2_hnk2k"]
[ext_resource type="PackedScene" uid="uid://cnpcrhnjo25h1" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Options.tscn" id="3_mocr6"]
[ext_resource type="PackedScene" uid="uid://ceaqnana6y842" path="res://Global_Scenes/Debug/Scenes/Value_Select/Var_Select.tscn" id="4_ux75s"]
[ext_resource type="PackedScene" uid="uid://dmysqox083lhl" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Bool.tscn" id="5_bhp0q"]
[ext_resource type="PackedScene" uid="uid://co04pnio1htpq" path="res://Global_Scenes/Debug/Scenes/Object_Select/Object_Select.tscn" id="6_c0y7a"]
[ext_resource type="PackedScene" uid="uid://c4crrjgxi6qq2" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Point3D.tscn" id="7_pf5et"]

[node name="Move_Free_Camera" instance=ExtResource("1_dmsvm")]
script = ExtResource("2_hnk2k")

[node name="Type" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="0" instance=ExtResource("3_mocr6")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_TYPE_%s"
_e_options = ["Move_Route", "Object_To_Object", "Object_To_Point"]
_e_heading_loc_id = "DEBUG_CUTSCENES_TYPE"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Interpolate" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="1" instance=ExtResource("5_bhp0q")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_INTERPOLATE"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Value" parent="Window/Contents/Margin/HBox/Right/Options/VBox/Interpolate" index="1"]
button_pressed = true

[node name="Speed" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="2" instance=ExtResource("3_mocr6")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_SPEED_%s"
_e_options = ["Very_Slow", "Slow", "Normal", "Fast", "Very_Fast"]
_e_heading_loc_id = "DEBUG_CUTSCENES_SPEED"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Trans_Type" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="3" instance=ExtResource("3_mocr6")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_TRANS_TYPE_%s"
_e_options = ["Linear", "Sine", "Quint", "Quart", "Quad", "Expo", "Elastic", "Cubic", "Circ", "Bounce", "Back"]
_e_heading_loc_id = "DEBUG_CUTSCENES_TRANS_TYPE"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Ease_Type" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="4" instance=ExtResource("3_mocr6")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_EASE_TYPE_%s"
_e_options = ["In", "Out", "In_Out", "Out_In"]
_e_heading_loc_id = "DEBUG_CUTSCENES_EASE_TYPE"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Object" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="5"]
_e_allowed_classes = Array[String](["Node3D"])

[node name="End_Object" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="6" instance=ExtResource("6_c0y7a")]
layout_mode = 2
_e_needed_comps = Array[String](["Reference", "Camera"])

[node name="Point" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="7" instance=ExtResource("7_pf5et")]
layout_mode = 2
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Change_Camera" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="8" instance=ExtResource("5_bhp0q")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_CHANGE_CAMERA"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Wait_Finish" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="9" instance=ExtResource("5_bhp0q")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_WAIT_FINISH"
_e_var_select_scene = ExtResource("4_ux75s")

[node name="Value" parent="Window/Contents/Margin/HBox/Right/Options/VBox/Wait_Finish" index="1"]
button_pressed = true

[editable path="Window"]
[editable path="Window/Contents/Margin/HBox/Left/Preview"]
[editable path="Window/Contents/Margin/HBox/Left/Grid/Offset"]
[editable path="Window/Contents/Margin/HBox/Right/Options/VBox/Interpolate"]
[editable path="Window/Contents/Margin/HBox/Right/Options/VBox/Wait_Finish"]
